--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.0",
     "swr": "^0.5.6"
   },
   "devDependencies": {
