--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-login": "^5.2.2",
     "react-intersection-observer": "^8.32.0",
     "swr": "^0.5.6"
   },
