--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "camelcase-keys": "^7.0.0",
     "dayjs": "^1.10.5",
+    "firebase": "^8.8.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
