--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.11",
     "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
