--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "axios": "^0.21.1",
     "camelcase-keys": "^7.0.0",
