--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.5",
+    "prettier": "2.3.2",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.4"
   }
