--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "camelcase-keys": "^7.0.0",
     "dayjs": "^1.10.5",
     "firebase": "^8.8.1",
+    "immer": "^9.0.6",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
