--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "axios": "^0.21.1",
     "camelcase-keys": "^7.0.0",
+    "classnames": "^2.3.1",
     "dayjs": "^1.10.5",
     "firebase": "^8.8.1",
     "immer": "^9.0.6",
