--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
+    "@tailwindcss/line-clamp": "^0.2.2",
     "@types/react": "^17.0.11",
     "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
