--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.5",
+    "postcss-nesting": "^8.0.1",
     "prettier": "2.3.2",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.4"
