--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.0",
+    "react-transition-group": "^4.4.2",
     "swr": "^1.0.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/line-clamp": "^0.2.2",
     "@types/react": "^17.0.11",
+    "@types/react-transition-group": "^4.4.4",
     "autoprefixer": "^10.2.6",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
