--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.4.6",
     "postcss-nesting": "^8.0.1",
     "prettier": "2.3.2",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "tailwindcss": "^3.0.18",
     "typescript": "^4.3.4"
   }
