--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "immer": "^9.0.6",
+    "lodash.debounce": "^4.0.8",
     "next": "^11.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
